fixed secondary color

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -149,7 +149,7 @@
 
     /* Color - Brand */
     --color-primary: #EA5D1A;
-    --color-secondary: #EA5D1A;
+    --color-secondary: #DEDAD4 ;
 
     /* Typography - Size */
     --font-size-display: 68px;
